# smart-organizer

./: .gitignore  main.py  pyproject.toml
src/smart_organizer/: __init__.py
